--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "recipe-search-app",
+  "name": "niladri-dev",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://ayushkul.github.io/react-recipe-finder",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.4",
